ProdIND/ProdPrograms/force-app/main/default/objects/ProCredit_Deals__c/ProCredit_Deals__c.object-meta.xml
<CustomObject>
    <label>ProCredit Deals</label>
    <nameField>
        <label>ProCredit Deals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProCredit Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>