ProdIND/ProdPrograms/force-app/main/default/objects/ProCredit_Deals__c/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <label>Deal Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>