ProdIND/ProdPrograms/force-app/main/default/objects/ProCredit_Deals__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>