ProdIND/ProdPrograms/force-app/main/default/objects/ProCredit_Deals__c/fields/SMS_URL__c.field-meta.xml
<CustomField>
    <fullName>SMS_URL__c</fullName>
    <label>SMS URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>