ProdIND/ProdPrograms/force-app/main/default/objects/ProCredit_Deals__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <label>Unique Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>